# sudoku

./: README.md  main.py  pyproject.toml
sudoku/: __init__.py  checkers.py  generator.py  menu.py  ui.py
